# Androidtest

./: .gitignore  build.gradle  import-summary.txt  settings.gradle
.navigation/app/raw/: main.nvg.xml
aFileChooser/: build.gradle
akvideoplayer/: build.gradle  proguard-rules.pro
akvideoplayer/src/main/: AndroidManifest.xml
akvideoplayer/src/main/jni/: Application.mk
akvideoplayer/src/main/jni/ffmpeg/: Android.mk
akvideoplayer/src/main/jni/src/: Android.mk  ccMediaDecoder.c  simplest_showbmp - 副本.c
akvideoplayer/src/main/res/anim/: anim_enter_from_bottom.xml  anim_exit_from_bottom.xml
akvideoplayer/src/main/res/drawable/: background_circular.xml  background_color.xml
akvideoplayer/src/main/res/layout/: layout_video_mediacontroler.xml  layout_video_player.xml  (+1 more)
android-dd/: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: log4j.properties
app/src/main/java/: WifiManageHelper.java
barCodeTest/: build.gradle
ftpserver/: build.gradle  ftpicon.psd  proguard-rules.pro
ftpserver/src/main/: AndroidManifest.xml
ftpserver/src/main/assets/: users.properties
gradle/wrapper/: gradle-wrapper.properties
localvp/: build.gradle
mt/: build.gradle  mt-release.apk
mt/src/main/: AndroidManifest.xml
mt/src/main/assets/: keyboard  start.sh  stop.sh
mt/src/main/jni/: Android.mk  Application.mk  keyboard.c  qwe.c
myapplication/: build.gradle
myapplication/src/main/: AndroidManifest.xml
ndktest/: build.gradle
ndktest/src/main/: AndroidManifest.xml
ndktest/src/main/CPP/: CMakeLists.txt  test.cpp
ndktest/src/main/CPP/libpng/: CMakeLists.txt  example.c
ndktest/src/main/jni/: png.c
opengl/: build.gradle  local.properties
opengl/src/main/: AndroidManifest.xml
photoview/: build.gradle
photoview/src/main/: AndroidManifest.xml
photoview/src/main/assets/: FragmentShader.glsl  FragmentShaderYUV.glsl  VertexShader.glsl
senser/: build.gradle
senser/src/main/: AndroidManifest.xml
sensers/: build.gradle
sensers/src/main/: AndroidManifest.xml
swiFTPLib/: build.gradle
videotest/: build.gradle
videotest/src/main/: AndroidManifest.xml
videotest2/: build.gradle
videotest2/src/main/: AndroidManifest.xml
viewtest/: build.gradle
viewtest/src/main/: AndroidManifest.xml
vpn/: build.gradle
vpn/src/main/: AndroidManifest.xml
vpn_c/: build.gradle
vpn_c/src/main/: AndroidManifest.xml
wallpaper/: build.gradle  proguard-rules.pro
wallpaper/src/main/: AndroidManifest.xml
wallpaper/src/main/assets/: FragmentShader.glsl  VertexShader.glsl
(+198 files in other folders)
